@@ -1,3 +1,10 @@
+2007-04-28  Benoît Dejean  <benoit@placenet.org>
+
+	* src/proctable.cpp:
+	* src/util.cpp:
+	
+	Simpler code to display size columns.
+
 2007-04-27  Benoît Dejean  <benoit@placenet.org>
 
 	* src/gnome-system-monitor.schemas.in:
